# news-alert-system

./: .dockerignore  .env.example  .gitignore  DOCKERFILE  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: database.py  entrypoints.py  main.py
app/api/: router.py  routes_admin.py  routes_alerts.py  routes_news.py  schemas.py
app/core/: config.py  db.py  logging.py  retry.py  scheduler.py  worker.py
app/domain/: entities.py  interfaces.py
app/infrastructure/: groq_client.py  rss_client.py  smtp_emailer.py
app/models/: __init__.py  alert_doc.py  models.py  news_item_doc.py
app/services/: alert_sender.py  classifier.py  feed_service.py  news_fetcher.py
app/ui/: dashboard.py  streamlit.py
app/workers/: ingest.py
scripts/: run_scheduler.py
