[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "news-alert-system"
version = "0.1.0"
description = "News Alert System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosmtplib>=5.0.0",
    "fastapi>=0.123.0",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "redis>=7.1.0",
    "rq>=2.6.1",
    "slowapi>=0.1.9",
    "sqlmodel>=0.0.27",
    "streamlit>=1.51.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "uvicorn>=0.38.0",
    "watchfiles>=1.1.1",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "mypy>=1.19.0",
    "pytest>=9.0.1",
    "ruff>=0.14.7",
]
