[project]
name = "news-alert-system"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "uvicorn[standard]",
    "sqlmodel",
    "psycopg2-binary",
    "redis",
    "rq",
    "httpx",
    "feedparser",
    "python-dotenv",
    "jinja2",
    "aiosmtplib",
    "streamlit",
    "groq",
    "slowapi",
    "watchfiles",
    "python-multipart",
    "pydantic-settings>=2.12.0",
]
