[project]
name = "news-alert-system"
version = "0.1.0"
description = "A modular news-alert system (FastAPI backend + Streamlit UI) built for demo and extension."
authors = [
  { name="Nahom", email="you@example.com" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "fastapi>=0.95.2",
  "uvicorn[standard]>=0.22.0",
  "httpx>=0.24.1",
  "feedparser>=6.0.10",
  "pydantic>=1.10.9",
  "python-dotenv>=1.0.0",
  "streamlit>=1.21.0",
  "jinja2>=3.1.2",
  "python-dateutil>=2.8.2",
  "schedule>=1.2.0",
  "groq>=0.37.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[scripts]
start = "python -m app.main"
dev = "uvicorn app.main:app --reload --port 8000"
ui = "streamlit run ui/streamlit_app.py"
scheduler = "python scripts/run_scheduler.py"
